ADD navigation links to projet

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <ul>
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/about">About</a></li>
+        </ul>
+    </div>
     <div id="app"></div>
     <script src="./useJs.js"></script>
     <script>
